--- a/assets/src/frontend/scss/styles.scss
+++ b/assets/src/frontend/scss/styles.scss
@@ -150,6 +150,11 @@ body.maxi-blocks--active {
 					min-width: 300px;
 				}
 			}
+			.wp-block-image {
+				img {
+					width: 330px !important;
+				}
+			}
 			padding: 30px 0 !important;
 		}
 		&_footer_columns {
